--- a/app/styles/tables.css
+++ b/app/styles/tables.css
@@ -3,21 +3,28 @@ table {
 	width: 100%;
 }
 
+th {
+	background-color: rgb(70, 90, 128);
+	color: white;
+}
+
 th, td {
 	padding: 8px;
 	text-align: left;
 	border-bottom: 1px solid #ddd;
 }
 
-th {
-	background-color: rgb(92, 128, 196);
-	color: white;
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+.customer {
+	color: black;
 }
 
 .customer:hover {
 	background-color: rgb(224, 224, 224);
 }
 
-tr:nth-child(even) {
-	background-color: #f2f2f2;
-}
+
+
