--- a/app/styles/header.css
+++ b/app/styles/header.css
@@ -1,6 +1,6 @@
 .header {
 	overflow: hidden;
-	background-color: #f1f1f1;
+	background-color: #111;
 	font-size: 10px
 	padding: 2px;
 }
@@ -8,9 +8,14 @@
 .link { 
   	padding: 8px;
 	font-weight: bold;
-	color: black;
+	color: #818181;
   	text-align: center;
   	text-decoration: none;
+	transition: 0.3s;
+}
+
+.link:hover {
+  color: #f1f1f1;
 }
 
 .account {
