--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -12,3 +12,15 @@ body {
 	max-width: 75%;
 	margin: auto;
 }
+
+.print {
+	border: none;
+	border-radius: 5px;
+	font-size: 18px;
+	background-color: rgb(70, 90, 128);
+	color: white;
+}
+
+.print:hover {
+	background-color: rgb(86, 106, 144);
+}
